--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
  <body>
    <table cellspacing="20">
      <tr>
-       <td> <img src="images/profilepic.jpg" alt="Dylan Doren Profile Pic"></td>
+       <td> 
+        <img src="images/profilepic.jpg" alt="Dylan Doren Profile Pic">
+      </td>
        <td>
          <h1>Dylan Trash</h1>
          <p> <em>Future <strong>Ace Programmer</strong> </em> </p>
